// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManifestSection renders the expected snapshot for a populated section 1`] = `
<section
  className="manifest-section "
>
  <h2
    className="manifest-section__title"
  >
    Lorem ipsum
  </h2>
  <tr>
    <td>
      foo
    </td>
  </tr>
</section>
`;

exports[`ManifestSection renders the expected snapshot for a section with no children 1`] = `
<section
  className="manifest-section manifest-section--empty"
>
  <h2
    className="manifest-section__title"
  >
    Lorem ipsum
  </h2>
</section>
`;
